products pages alomost done

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
 
 
-    <title>React App</title>
+    <title>Om Epc solution</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
